EN-19921: opMeasures: Truncate long numbers with ellipsis (stopgap).
Full text is accessible on hover.

--- a/frontend/app/styles/op-measure/components/_measure-result-card.scss
+++ b/frontend/app/styles/op-measure/components/_measure-result-card.scss
@@ -13,6 +13,8 @@
 
   .measure-result-big-number {
     font-size: 42px;
+    overflow: hidden;
+    text-overflow: ellipsis;
 
     &.percent {
       &:after {
